--- a/styles.css
+++ b/styles.css
@@ -9,25 +9,24 @@ body {
 h1 {
     font-size: 2.5rem; 
     font-weight: bold;
-    margin: 20px; padding: 10px 20px;
   }
   
   h2 {
     font-size: 2rem; 
     font-weight: bold;
-    margin: 20px; 
+    margin: 2rem; 
   }
   
   h3 {
     font-size: 1.75rem; 
     font-weight: bold;
-    margin: 20px; padding: 10px 20px;
+    margin: 2rem; padding: 1rem 2rem;
   }
   
   h4 {
     font-size: 1.5rem; 
     font-weight: bold;
-    margin: 20px; padding: 10px 20px;
+    margin: 2rem; padding: 1rem 2rem;
   }
   a {
     color: blue; 
@@ -40,7 +39,7 @@ h1 {
 
 th, td {
   border: 1px solid white;   
-  border-radius: 10px;
+  border-radius: 1rem;
 
   background-color: #96D4D4;
     text-align: left; /* wyrównuje tekst do lewej */
@@ -55,24 +54,24 @@ th, td {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100px;
-  height: 100px;
+  width: 5rem;
+  height: 5rem;
   background-color: skyblue;
-  margin: 10px;
+  margin: 1rem;
 }
 .box2 {
   
   background-color: skyblue;
-  margin: 10px;
+  margin: 1rem;
 }
 
 .box1 {
   display: flex-auto;
   background-color: skyblue;
-  margin: 10px;
+  margin: 1rem;
 }
 .boxnone {
   display: flex-none;
   background-color: skyblue;
-  margin: 10px;
+  margin: 1rem;
 }
